data/derived/fa15/progs/unify/prog3417.ml.out
Characters 92-106:
  | h::t -> [mulByDigit i t + carry h i] @ [remainder i t];;
             ^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
